--- a/backend/src/main/resources/log4j.properties
+++ b/backend/src/main/resources/log4j.properties
@@ -22,15 +22,15 @@ log4j.appender.org.hibernate.layout=org.apache.log4j.PatternLayout
 log4j.appender.org.hibernate.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss,SSS} %5p [%t] (%F:%L) - %m%n
 
 #=========================: Application logging
-log4j.appender.com.may.ple.parking.center=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.com.may.ple.parking.center.file=D:/data/parkinglog/parking.log
-log4j.appender.com.may.ple.parking.center.datePattern='.'yyyy-MM-dd
-log4j.appender.com.may.ple.parking.center.append=true
-log4j.appender.com.may.ple.parking.center.layout=org.apache.log4j.PatternLayout
-log4j.appender.com.may.ple.parking.center.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss,SSS} %5p [%t] (%F:%L) - %m%n
+log4j.appender.com.may.ple.backend=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.com.may.ple.backend.file=D:/data/parkinglog/parking.log
+log4j.appender.com.may.ple.backend.datePattern='.'yyyy-MM-dd
+log4j.appender.com.may.ple.backend.append=true
+log4j.appender.com.may.ple.backend.layout=org.apache.log4j.PatternLayout
+log4j.appender.com.may.ple.backend.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss,SSS} %5p [%t] (%F:%L) - %m%n
 
 log4j.logger.org.springframework.web=INFO, org.springframework.web
 log4j.logger.org.hibernate=INFO, org.hibernate
-log4j.logger.com.may.ple.parking.center=DEBUG, com.may.ple.parking.center
+log4j.logger.com.may.ple.backend=DEBUG, com.may.ple.backend
 
 
