--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.config=log4j.properties
 #-----: Data Source
 spring.datasource.url=jdbc:mysql://localhost/ricoh_db
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=fender
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.maxActive=50
 spring.datasource.maxIdle=25
