--- a/backend/src/main/resources/log4j.properties
+++ b/backend/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=ERROR, stdout
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] %d{HH:mm:ss,SSS} (%F:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t] %d{HH:mm:ss,SSS} (%F:%L:%M) - %m%n
 
 #=========================: Spring logging
 log4j.appender.org.springframework.web=org.apache.log4j.DailyRollingFileAppender
@@ -27,7 +27,7 @@ log4j.appender.com.may.ple.backend.file=D:/data/parkinglog/master.log
 log4j.appender.com.may.ple.backend.datePattern='.'yyyy-MM-dd
 log4j.appender.com.may.ple.backend.append=true
 log4j.appender.com.may.ple.backend.layout=org.apache.log4j.PatternLayout
-log4j.appender.com.may.ple.backend.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss,SSS} %5p [%t] (%F:%L) - %m%n
+log4j.appender.com.may.ple.backend.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss,SSS} %5p [%t] (%F:%L:%M) - %m%n
 
 log4j.logger.org.springframework.web=INFO, org.springframework.web
 log4j.logger.org.hibernate=INFO, org.hibernate
