--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,6 +67,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.glassfish.jersey.media</groupId>
+		    <artifactId>jersey-media-multipart</artifactId>
+		    <version>2.14</version>
+		</dependency>
+
 	</dependencies>
 	
 	<build>
