--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #-----: Application
-# session timeout in seconds
+# session timeout in seconds 12 hour
 spring.main.show_banner=true
 server.port=9000
-server.session-timeout=1800
+server.session-timeout=43200
 
 #-----: Log
 logging.config=log4j.properties
@@ -15,14 +15,6 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.maxActive=50
 spring.datasource.maxIdle=25
 spring.datasource.minIdle=25
-
-#spring.datasource.url=jdbc:postgresql://ec2-54-243-149-147.compute-1.amazonaws.com:5432/d3dv8eejr0kkb2?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-#spring.datasource.username=kpyxqqelcfskbm
-#spring.datasource.password=eb83UTn8Ei-lsuEp3bIjpZP4oj
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.maxActive=10
-#spring.datasource.maxIdle=5
-#spring.datasource.minIdle=5
 
 #-----:  JPA
 spring.jpa.show-sql=false
