--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -72,7 +72,16 @@
 		    <artifactId>jersey-media-multipart</artifactId>
 		    <version>2.14</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.13</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
