--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.datasource.minIdle=25
 #-----:  JPA
 spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=create
+
+#-----:  Path
+ext.template.menu=D://menu.docx
