--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,4 +21,4 @@ spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=create
 
 #-----:  Path
-ext.template.menu=D://menu.docx
+ext.template.menu=D:/templates/menu.docx
