--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,21 +8,13 @@ server.session-timeout=1800
 logging.config=log4j.properties
 
 #-----: Data Source
-spring.datasource.url=jdbc:mysql://localhost/backend_db
+spring.datasource.url=jdbc:mysql://localhost/spt_trader
 spring.datasource.username=root
-spring.datasource.password=fender
+spring.datasource.password=1234
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.maxActive=50
 spring.datasource.maxIdle=25
 spring.datasource.minIdle=25
-
-#spring.datasource.url=jdbc:postgresql://ec2-54-243-149-147.compute-1.amazonaws.com:5432/d3dv8eejr0kkb2?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-#spring.datasource.username=kpyxqqelcfskbm
-#spring.datasource.password=eb83UTn8Ei-lsuEp3bIjpZP4oj
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.maxActive=10
-#spring.datasource.maxIdle=5
-#spring.datasource.minIdle=5
 
 #-----:  JPA
 spring.jpa.show-sql=false
