--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.session-timeout=1800
 logging.config=log4j.properties
 
 #-----: Data Source
-spring.datasource.url=jdbc:mysql://localhost/backend_db
+spring.datasource.url=jdbc:mysql://localhost/debt_db
 spring.datasource.username=root
 spring.datasource.password=fender
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
