--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+		  	<artifactId>joda-time</artifactId>
+		  	<version>2.9.3</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
