--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.maxActive=50
 spring.datasource.maxIdle=25
 spring.datasource.minIdle=25
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
 
 #-----:  JPA
 spring.jpa.show-sql=false
