--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.maxActive=50
 spring.datasource.maxIdle=25
 spring.datasource.minIdle=25
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
 
 #spring.datasource.url=jdbc:postgresql://ec2-54-243-149-147.compute-1.amazonaws.com:5432/d3dv8eejr0kkb2?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
 #spring.datasource.username=kpyxqqelcfskbm
