--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -77,6 +77,11 @@
 		  	<artifactId>joda-time</artifactId>
 		  	<version>2.9.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.5.9</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
