--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,15 +8,17 @@ server.session-timeout=1800
 logging.config=log4j.properties
 
 #-----: Data Source
-spring.datasource.url=jdbc:mysql://localhost/debt_db
-spring.datasource.username=root
-spring.datasource.password=fender
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.maxActive=50
-spring.datasource.maxIdle=25
-spring.datasource.minIdle=25
-spring.datasource.testOnBorrow=true
-spring.datasource.validationQuery=SELECT 1
+#spring.datasource.url=jdbc:mysql://localhost/debt_db
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.maxActive=50
+#spring.datasource.maxIdle=25
+#spring.datasource.minIdle=25
+#spring.datasource.testOnBorrow=true
+#spring.datasource.validationQuery=SELECT 1
+
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/debt_db
 
 #spring.datasource.url=jdbc:postgresql://ec2-54-243-149-147.compute-1.amazonaws.com:5432/d3dv8eejr0kkb2?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
 #spring.datasource.username=kpyxqqelcfskbm
