--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.datasource.validationQuery=SELECT 1
 #-----:  JPA
 spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=create
+
+#-----: External Conf.
+ext.template.register.excel=D:/templates/registered_report.xlsx
