--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,7 +18,7 @@ logging.config=log4j.properties
 #spring.datasource.testOnBorrow=true
 #spring.datasource.validationQuery=SELECT 1
 
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/debt_db
+spring.data.mongodb.uri=mongodb://localhost:27017/debt_db
 
 #spring.datasource.url=jdbc:postgresql://ec2-54-243-149-147.compute-1.amazonaws.com:5432/d3dv8eejr0kkb2?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
 #spring.datasource.username=kpyxqqelcfskbm
@@ -29,5 +29,5 @@ spring.data.mongodb.uri=mongodb://127.0.0.1:27017/debt_db
 #spring.datasource.minIdle=5
 
 #-----:  JPA
-spring.jpa.show-sql=false
+#spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=create
