--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,6 +8,7 @@
 
 	<properties>
 		<java.version>1.7</java.version>
+		<jjwt.version>0.6.0</jjwt.version>
 	</properties>
 
 	<parent>
@@ -71,6 +72,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
+		 <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>${jjwt.version}</version>
+        </dependency>
 	</dependencies>
 	
 	<build>
