--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -31,3 +31,16 @@ spring.data.mongodb.uri=mongodb://localhost:27017/debt_db
 #-----:  JPA
 #spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=create
+
+
+
+
+# App configuration
+cerberus.token.header=X-Auth-Token
+cerberus.token.secret=sssshhhh!
+cerberus.token.expiration=604800
+
+# Routes
+cerberus.route.authentication=auth
+cerberus.route.authentication.refresh=refresh
+cerberus.route.protected=protected
