--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,7 +37,8 @@ spring.data.mongodb.uri=mongodb://localhost:27017/debt_db
 
 # App configuration
 cerberus.token.header=X-Auth-Token
-cerberus.token.secret=sssshhhh!
+cerberus.token.secret=w,j[vd8iy[
+#second ext. 604800 sec = 7 days
 cerberus.token.expiration=604800
 
 # Routes
