--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,5 +22,13 @@ spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=create
 
+#-----:  Email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mayfender.work@gmail.com
+spring.mail.password=19042528
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
+
 #-----: External Conf.
 ext.template.register.excel=D:/templates/registered_report.xlsx
