--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,34 +1,2 @@
-#-----: Application
-# session timeout in seconds
-spring.main.show_banner=true
-server.port=9000
-server.session-timeout=1800
-
-#-----: Log
-logging.config=log4j.properties
-
-#-----: Data Source
-spring.datasource.url=jdbc:mysql://localhost/spt_trader
-spring.datasource.username=root
-spring.datasource.password=fender
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.maxActive=50
-spring.datasource.maxIdle=25
-spring.datasource.minIdle=25
-spring.datasource.testOnBorrow=true
-spring.datasource.validationQuery=SELECT 1
-
-#-----:  JPA
-spring.jpa.show-sql=false
-#spring.jpa.hibernate.ddl-auto=create
-
-#-----:  Email
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=mayfender.work@gmail.com
-spring.mail.password=19042528
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.auth=true
-
-#-----: External Conf.
-ext.template.register.excel=D:/templates/registered_report.xlsx
+# Default profile
+spring.profiles.active=prod
