--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -31,4 +31,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.auth=true
 
 #-----: External Conf.
-ext.template.register.excel=D:/templates/registered_report.xlsx
+ext.template.register.excel=C:/templates/registered_report.xlsx
