--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,19 +1,20 @@
-#-----: Application
+#------------: Application
 # session timeout in seconds
 spring.main.show_banner=true
 server.port=9000
 server.session-timeout=1800
 
-#-----: Log
+#------------: Log conf
 logging.config=log4j.properties
 
-#-----: Data Source
-
+#------------: Data Source conf
 spring.data.mongodb.uri=mongodb://localhost:27017/debt_db
 
-
-# App configuration
+#------------: Token conf
 cerberus.token.header=X-Auth-Token
 cerberus.token.secret=w,j[vd8iy[
 #second ext. 604800 sec = 7 days
 cerberus.token.expiration=604800
+
+#------------: File path conf
+file.path.task=D:/upload/task
