--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,3 +18,4 @@ cerberus.token.expiration=604800
 
 #------------: File path conf
 file.path.task=D:/upload/task
+file.path.task_others=D:/upload/task_others
