--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,3 +19,4 @@ cerberus.token.expiration=604800
 #------------: File path conf
 file.path.task=D:/upload/task
 file.path.task_others=D:/upload/task_others
+file.path.notice=D:/upload/notice
