--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -105,6 +105,11 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.14</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-scratchpad</artifactId>
+		    <version>3.14</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
