--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -110,6 +110,11 @@
 		    <artifactId>poi-scratchpad</artifactId>
 		    <version>3.14</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.velocity</groupId>
+		    <artifactId>velocity</artifactId>
+		    <version>1.7</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
