--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,6 +9,8 @@ logging.config=log4j.properties
 
 #------------: Data Source conf
 spring.data.mongodb.uri=mongodb://localhost:27017/debt_db
+spring.data.mongodb.username=may
+spring.data.mongodb.password=19042528
 
 #------------: Token conf
 cerberus.token.header=X-Auth-Token
