--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,3 +22,4 @@ cerberus.token.expiration=604800
 file.path.task=D:/upload/task
 file.path.task_others=D:/upload/task_others
 file.path.notice=D:/upload/notice
+file.path.traceResultReport=D:/upload/traceResultReport
