--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,9 +8,12 @@ server.session-timeout=1800
 logging.config=log4j.properties
 
 #------------: Data Source conf
-spring.data.mongodb.uri=mongodb://localhost:27017/debt_db
+#spring.data.mongodb.uri=mongodb://192.168.1.254:27017/debt_db
+spring.data.mongodb.host=192.168.1.254
+spring.data.mongodb.port=27017
 spring.data.mongodb.username=may
 spring.data.mongodb.password=19042528
+spring.data.mongodb.database=debt_db
 
 #------------: Token conf
 cerberus.token.header=X-Auth-Token
