--- a/backend/src/main/resources/log4j.properties
+++ b/backend/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.layout.ConversionPattern=%5p [%t] %d{HH:mm:ss,SSS} (%F:%L:
 
 #=========================: Spring logging
 log4j.appender.org.springframework.web=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.org.springframework.web.file=D:/data/parkinglog/master.log
+log4j.appender.org.springframework.web.file=D:/data/dms_log/spring.log
 log4j.appender.org.springframework.web.datePattern='.'yyyy-MM-dd
 log4j.appender.org.springframework.web.append=true
 log4j.appender.org.springframework.web.layout=org.apache.log4j.PatternLayout
@@ -15,7 +15,7 @@ log4j.appender.org.springframework.web.layout.ConversionPattern=%d{dd/MM/yyyy HH
 
 #=========================: Hibernate logging
 log4j.appender.org.hibernate=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.org.hibernate.file=D:/data/parkinglog/master.log
+log4j.appender.org.hibernate.file=D:/data/dms_log/hibernate.log
 log4j.appender.org.hibernate.datePattern='.'yyyy-MM-dd
 log4j.appender.org.hibernate.append=true
 log4j.appender.org.hibernate.layout=org.apache.log4j.PatternLayout
@@ -23,7 +23,7 @@ log4j.appender.org.hibernate.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss,SSS
 
 #=========================: Application logging
 log4j.appender.com.may.ple.backend=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.com.may.ple.backend.file=D:/data/parkinglog/master.log
+log4j.appender.com.may.ple.backend.file=D:/data/dms_log/app.log
 log4j.appender.com.may.ple.backend.datePattern='.'yyyy-MM-dd
 log4j.appender.com.may.ple.backend.append=true
 log4j.appender.com.may.ple.backend.layout=org.apache.log4j.PatternLayout
@@ -31,6 +31,6 @@ log4j.appender.com.may.ple.backend.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:
 
 log4j.logger.org.springframework.web=INFO, org.springframework.web
 log4j.logger.org.hibernate=INFO, org.hibernate
-log4j.logger.com.may.ple.backend=DEBUG, com.may.ple.backend
+log4j.logger.com.may.ple.backend=INFO, com.may.ple.backend
 
 
