--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,3 +25,4 @@ file.path.task=D:/upload/task
 file.path.task_others=D:/upload/task_others
 file.path.notice=D:/upload/notice
 file.path.traceResultReport=D:/upload/traceResultReport
+file.path.payment=D:/upload/payment
