--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -105,6 +105,11 @@
 		    <artifactId>velocity</artifactId>
 		    <version>1.7</version>
 		</dependency>
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports</artifactId>
+		    <version>6.3.0</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
