--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -110,6 +110,16 @@
 		    <artifactId>jasperreports</artifactId>
 		    <version>6.3.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-compress</artifactId>
+		    <version>1.12</version>
+		</dependency>
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.5</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
