--- a/backend/src/main/resources/log4j.properties
+++ b/backend/src/main/resources/log4j.properties
@@ -31,6 +31,6 @@ log4j.appender.com.may.ple.backend.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:
 
 log4j.logger.org.springframework.web=INFO, org.springframework.web
 log4j.logger.org.hibernate=INFO, org.hibernate
-log4j.logger.com.may.ple.backend=INFO, com.may.ple.backend
+log4j.logger.com.may.ple.backend=DEBUG, com.may.ple.backend
 
 
