--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.data.mongodb.database=debt_db
 #------------: Token conf
 cerberus.token.header=X-Auth-Token
 cerberus.token.secret=w,j[vd8iy[
-#second ext. 604800 sec = 7 days
-cerberus.token.expiration=604800
+#second ext. 604800 sec = 7 days, 43200 = 12 hours
+cerberus.token.expiration=43200
 
 #------------: File path conf
 file.path.task=D:/upload/task
