--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<parent>
@@ -55,6 +55,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
 		</dependency>
 		<dependency>
 			<groupId>postgresql</groupId>
@@ -66,6 +67,12 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.linecorp.bot</groupId>
+		    <artifactId>line-bot-spring-boot</artifactId>
+		    <version>1.1.0</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
