--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -130,6 +130,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.38</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+		  	<artifactId>joda-time</artifactId>
+		  	<version>2.9.3</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
