--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 #------------: Application
+backend.version=${project.version}
+
 # session timeout in seconds
 spring.main.show_banner=true
 server.port=9000
