--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -140,6 +140,11 @@
 		    <artifactId>commons-exec</artifactId>
 		    <version>1.3</version>
 		</dependency>
+		<dependency><!-- Use this dependency in your licensed application -->
+            <groupId>net.nicholaswilliams.java.licensing</groupId>
+            <artifactId>licensing-core</artifactId>
+            <version>1.1.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
