--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,8 +23,8 @@ cerberus.token.secret=w,j[vd8iy[
 cerberus.token.expiration=43200
 
 #------------: File path conf
-file.path.task=D:/upload/task
-file.path.task_others=D:/upload/task_others
-file.path.notice=D:/upload/notice
-file.path.traceResultReport=D:/upload/traceResultReport
-file.path.payment=D:/upload/payment
+file.path.task=D:/DMS_DATA/upload/task
+file.path.task_others=D:/DMS_DATA/upload/task_others
+file.path.notice=D:/DMS_DATA/upload/notice
+file.path.traceResultReport=D:/DMS_DATA/upload/traceResultReport
+file.path.payment=D:/DMS_DATA/upload/payment
