--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -145,6 +145,11 @@
             <artifactId>licensing-core</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>dinstar.gsm</groupId>
+            <artifactId>gsmgateway</artifactId>
+            <version>1.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
