--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -150,6 +150,11 @@
             <artifactId>gsmgateway</artifactId>
             <version>1.0</version>
         </dependency>
+		<dependency>
+		    <groupId>org.apache.pdfbox</groupId>
+		    <artifactId>pdfbox</artifactId>
+		    <version>2.0.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
