--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,3 +28,4 @@ file.path.task_others=D:/DMS_DATA/upload/task_others
 file.path.notice=D:/DMS_DATA/upload/notice
 file.path.traceResultReport=D:/DMS_DATA/upload/traceResultReport
 file.path.payment=D:/DMS_DATA/upload/payment
+file.path.temp=D:/DMS_DATA/upload/temp
