--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -136,24 +136,39 @@
 			<version>2.9.3</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-exec</artifactId>
-		    <version>1.3</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-exec</artifactId>
+			<version>1.3</version>
 		</dependency>
 		<dependency><!-- Use this dependency in your licensed application -->
-            <groupId>net.nicholaswilliams.java.licensing</groupId>
-            <artifactId>licensing-core</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>dinstar.gsm</groupId>
-            <artifactId>gsmgateway</artifactId>
-            <version>1.0</version>
-        </dependency>
+			<groupId>net.nicholaswilliams.java.licensing</groupId>
+			<artifactId>licensing-core</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 		<dependency>
-		    <groupId>org.apache.pdfbox</groupId>
-		    <artifactId>pdfbox</artifactId>
-		    <version>2.0.4</version>
+			<groupId>dinstar.gsm</groupId>
+			<artifactId>gsmgateway</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-drive</artifactId>
+			<version>v3-rev64-1.22.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.22.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client-jetty</artifactId>
+			<version>1.22.0</version>
 		</dependency>
 	</dependencies>
 
