--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,3 +30,4 @@ file.path.traceResultReport=D:/DMS_DATA/upload/traceResultReport
 file.path.payment=D:/DMS_DATA/upload/payment
 file.path.programFile=D:/DMS_DATA/upload/program_file
 file.path.temp=D:/DMS_DATA/upload/temp
+file.path.exportTemplate=D:/DMS_DATA/upload/exportTemplate
