--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -207,12 +207,32 @@
 			<artifactId>fr.opensagres.xdocreport.template.velocity</artifactId>
 			<version>2.0.0</version>
 		</dependency>
-		
+
 		<!-- JODConverter -->
 		<dependency>
 			<groupId>com.artofsolving</groupId>
 			<artifactId>jodconverter</artifactId>
-			<version>2.2.1</version>
+			<version>2.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openoffice</groupId>
+			<artifactId>unoil</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openoffice</groupId>
+			<artifactId>ridl</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openoffice</groupId>
+			<artifactId>juh</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openoffice</groupId>
+			<artifactId>jurt</artifactId>
+			<version>4.1.2</version>
 		</dependency>
 	</dependencies>
 
