--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -208,8 +208,10 @@
 			<version>2.0.0</version>
 		</dependency>
 
-		<!-- JODConverter v 2.2.2 still don't have in maven repo so have to build by manually and others related lib have to add also. -->
-		<!-- (unoil, ridl, juh, jurt) IF maven repo have v 2.2.2 so don't have to add related lib -->
+		<!-- JODConverter v 2.2.2 still don't have in maven repo so have to build 
+			by manually and others related lib have to add also. -->
+		<!-- (unoil, ridl, juh, jurt) IF maven repo have v 2.2.2 so don't have 
+			to add related lib -->
 		<dependency>
 			<groupId>com.artofsolving</groupId>
 			<artifactId>jodconverter</artifactId>
@@ -236,7 +238,12 @@
 			<version>4.1.2</version>
 		</dependency>
 		<!-- JODConverter -->
-		
+
+		<dependency>
+			<groupId>org.jopendocument</groupId>
+			<artifactId>jOpenDocument</artifactId>
+			<version>1.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
