--- a/backend/src/main/resources/application_dynamic.properties
+++ b/backend/src/main/resources/application_dynamic.properties
@@ -10,6 +10,7 @@ file.path.task=D:/DMS_DATA/upload/task
 file.path.task_others=D:/DMS_DATA/upload/task_others
 file.path.notice=D:/DMS_DATA/upload/notice
 file.path.traceResultReport=D:/DMS_DATA/upload/traceResultReport
+file.path.forecastResultReport=D:/DMS_DATA/upload/forecastResultReport
 file.path.payment=D:/DMS_DATA/upload/payment
 file.path.programFile=D:/DMS_DATA/upload/program_file
 file.path.temp=D:/DMS_DATA/upload/temp
