--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.may.ple</groupId>
 	<artifactId>backend</artifactId>
 	<packaging>war</packaging>
-	<version>1.5.3-RC</version>
+	<version>1.5.4-RC</version>
 
 	<properties>
 		<java.version>1.7</java.version>
@@ -40,7 +40,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
+
 		<!-- Mongo DB Database -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -48,7 +48,7 @@
 			<version>1.5.4.RELEASE</version>
 		</dependency>
 		<!-- Mongo DB Database -->
-	
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -248,6 +248,12 @@
 			<groupId>org.jopendocument</groupId>
 			<artifactId>jOpenDocument</artifactId>
 			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.10.3</version>
 		</dependency>
 	</dependencies>
 
