--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -91,6 +91,11 @@
 			<version>5.5.9</version>
 		</dependency>
 		<dependency>
+		    <groupId>com.itextpdf.tool</groupId>
+		    <artifactId>xmlworker</artifactId>
+		    <version>5.5.9</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.14</version>
