--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -277,6 +277,11 @@
 			<artifactId>java-wkhtmltopdf-wrapper</artifactId>
 			<version>1.1.1-RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.tess4j</groupId>
+			<artifactId>tess4j</artifactId>
+			<version>3.4.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
