--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.may.ple</groupId>
 	<artifactId>backend</artifactId>
 	<packaging>war</packaging>
-	<version>1.9.0-RC_2</version>
+	<version>1.9.0-RC</version>
 
 	<properties>
 		<java.version>1.7</java.version>
