--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -91,9 +91,9 @@
 			<version>5.5.9</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.itextpdf.tool</groupId>
-		    <artifactId>xmlworker</artifactId>
-		    <version>5.5.9</version>
+			<groupId>com.itextpdf.tool</groupId>
+			<artifactId>xmlworker</artifactId>
+			<version>5.5.9</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -277,6 +277,24 @@
 			<artifactId>java-wkhtmltopdf-wrapper</artifactId>
 			<version>1.1.1-RELEASE</version>
 		</dependency>
+		<!-- <dependency>
+			<artifactId>jWebSocketServer</artifactId>
+			<groupId>org.jwebsocket</groupId>
+			<version>1.0</version>
+			<type>jar</type>
+		</dependency> -->
+		<dependency>
+			<artifactId>jWebSocketClientAPI</artifactId>
+			<groupId>org.jwebsocket</groupId>
+			<version>1.0</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<artifactId>jWebSocketJavaSEClient</artifactId>
+			<groupId>org.jwebsocket</groupId>
+			<version>1.0</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -306,6 +324,11 @@
 		<repository>
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
+		</repository>
+		<repository>
+			<id>jWebSocket-Repo</id>
+			<name>jWebSocket Repository</name>
+			<url>http://mvn.jwebsocket.org/</url>
 		</repository>
 	</repositories>
 </project>
