--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -295,6 +295,12 @@
 			<version>1.0</version>
 			<type>jar</type>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
