--- a/backend/src/main/resources/application_dynamic.properties
+++ b/backend/src/main/resources/application_dynamic.properties
@@ -15,3 +15,4 @@ file.path.payment=D:/DMS_DATA/upload/payment
 file.path.programFile=D:/DMS_DATA/upload/program_file
 file.path.temp=D:/DMS_DATA/upload/temp
 file.path.exportTemplate=D:/DMS_DATA/upload/exportTemplate
+file.path.smsTemplate=D:/DMS_DATA/upload/smsTemplate
