--- a/backend/src/main/resources/application_dynamic.properties
+++ b/backend/src/main/resources/application_dynamic.properties
@@ -6,6 +6,7 @@ spring.data.mongodb.password=19042528
 spring.data.mongodb.database=debt_db
 
 #------------: File path conf
+file.path.based=D:/DMS_DATA
 file.path.task=D:/DMS_DATA/upload/task
 file.path.task_others=D:/DMS_DATA/upload/task_others
 file.path.notice=D:/DMS_DATA/upload/notice
