--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.username=may
 spring.data.mongodb.password=19042528
 spring.data.mongodb.database=gambler_db
+
+#------------: File path conf
+file.path.jasper=C:/Users/LENOVO/Desktop/jasper
