--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,4 +25,4 @@ spring.data.mongodb.password=19042528
 spring.data.mongodb.database=gambler_db
 
 #------------: File path conf
-file.path.jasper=C:/Users/LENOVO/Desktop/jasper
+file.path.base=C:/Users/LENOVO/Desktop/gambler
