--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,8 +13,8 @@ logging.config=log4j.properties
 #------------: Token conf
 cerberus.token.header=X-Auth-Token
 cerberus.token.secret=w,j[vd8iy[
-#second ext. 604800 sec = 7 days, 43200 = 12 hours
-cerberus.token.expiration=43200
+#second ext. 604800 sec = 7 days, 43200 = 12 hours, 10800 = 3 hours, 21600 = 6 hours
+cerberus.token.expiration=21600
 
 
 #------------: Data Source conf
@@ -23,6 +23,3 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.username=may
 spring.data.mongodb.password=19042528
 spring.data.mongodb.database=gambler_db
-
-#------------: File path conf
-file.path.base=C:/Users/LENOVO/Desktop/gambler
