--- a/backend/src/main/resources/application_dynamic.properties
+++ b/backend/src/main/resources/application_dynamic.properties
@@ -1,2 +1,9 @@
+#------------: Data Source conf
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=may
+spring.data.mongodb.password=19042528
+spring.data.mongodb.database=gambler_db
+
 #------------: File path conf
 file.path.base=C:/Users/LENOVO/Desktop/gambler
