--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.may.ple</groupId>
 	<artifactId>backend</artifactId>
 	<packaging>war</packaging>
-	<version>2.0.9_2</version>
+	<version>2.1.0</version>
 
 	<properties>
 		<java.version>1.8</java.version>
